<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.rapidpm.demo</groupId>
  <artifactId>chopen2014</artifactId>
  <version>1.0-SNAPSHOT</version>

  <dependencies>
    <dependency>
      <groupId>com.tinkerforge</groupId>
      <artifactId>tinkerforge</artifactId>
      <version>2.1.1</version>
    </dependency>
    <!--MQTT-->
    <dependency>
      <groupId>org.eclipse.paho</groupId>
      <artifactId>mqtt-client</artifactId>
      <type>jar</type>
      <version>0.4.0</version>
    </dependency>
  </dependencies>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>2.4</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-source-plugin</artifactId>
          <version>2.2.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.16</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-repository-plugin</artifactId>
          <version>2.3.1</version>
        </plugin>
        <plugin>
          <groupId>com.atlassian.maven.plugins</groupId>
          <artifactId>maven-clover2-plugin</artifactId>
          <version>3.2.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-gpg-plugin</artifactId>
          <version>1.4</version>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
          <showDeprecation>true</showDeprecation>
          <showWarnings>true</showWarnings>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>jar</goal>
              <goal>test-jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>jar</goal>
              <goal>test-jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <!--<dependencies>-->
        <!--<dependency>-->
        <!--<groupId>org.apache.maven.surefire</groupId>-->
        <!--<artifactId>surefire-junit47</artifactId>-->
        <!--<version>2.16</version>-->
        <!--</dependency>-->
        <!--</dependencies>-->
        <configuration>
          <forkMode>always</forkMode>
          <!--<skipTests>true</skipTests>-->
          <!--<forkCount>2.5C</forkCount>-->
          <!--<forkCount>1</forkCount>-->
          <!--<parallel>methods</parallel>-->
          <!--<threadCount>10</threadCount>-->
          <!--<reuseForks>false</reuseForks>-->
          <!--<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>-->
          <!--<argLine>-Xmx1024m</argLine>-->
          <!--<forkMode>always</forkMode>-->
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-repository-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>com.atlassian.maven.plugins</groupId>
        <artifactId>maven-clover2-plugin</artifactId>
      </plugin>
      <!--<plugin>-->
      <!--<artifactId>kotlin-maven-plugin</artifactId>-->
      <!--<groupId>org.jetbrains.kotlin</groupId>-->
      <!--<version>0.6.602</version>-->

      <!--<executions>-->
      <!--<execution>-->
      <!--<id>compile</id>-->
      <!--<phase>process-sources</phase>-->
      <!--<goals> <goal>compile</goal> </goals>-->
      <!--</execution>-->

      <!--<execution>-->
      <!--<id>test-compile</id>-->
      <!--<phase>process-test-sources</phase>-->
      <!--<goals> <goal>test-compile</goal> </goals>-->
      <!--</execution>-->
      <!--</executions>-->
      <!--</plugin>-->
    </plugins>
  </build>

  <distributionManagement>
    <repository>
      <id>releases</id>
      <name>RapidPM Releases</name>
      <url>http://nexus.rapidpm.org/nexus/content/repositories/releases</url>
    </repository>
    <snapshotRepository>
      <id>snapshots</id>
      <name>RapidPM Snapshots</name>
      <url>http://nexus.rapidpm.org/nexus/content/repositories/snapshots</url>
    </snapshotRepository>
  </distributionManagement>


</project>